libsyndicate/libsyndicate.h

struct md_syndicate_conf;
// server configuration
struct md_syndicate_conf {
   // UG fields
   int64_t default_read_freshness;                    // default number of milliseconds a file can age before needing refresh for reads
   int64_t default_write_freshness;                   // default number of milliseconds a file can age before needing refresh for writes
   char* logfile_path;                                // path to the logfile
   bool gather_stats;                                 // gather statistics or not?
   bool use_checksums;                                // if set, send checksums of our local files in the metadata, and validate checksums (if possible) from remote files
   char* content_url;                                 // what is the URL under which published files can be accessed?
   char* data_root;                                   // root of the path where we store local file blocks
   char* staging_root;                                // root of the path where we store locally-written rmeote file blocks 
   int num_replica_threads;                           // how many replica threads?
   char* replica_logfile;                             // path on disk to replica log
   int httpd_portnum;                                 // port number for the httpd interface (syndicate-httpd only)
   
   // RG/AG servers
   unsigned int num_http_threads;                     // how many HTTP threads to create
   int http_authentication_mode;                      // for which operations do we authenticate?
   char* md_pidfile_path;                             // where to store the PID file for the gateway server
   char* gateway_metadata_root;                       // location on disk (if desired) to record metadata
   bool replica_overwrite;                            // overwrite replica file at the client's request
   char* server_key_path;                             // path to PEM-encoded TLS public/private key for this gateway server
   char* server_cert_path;                            // path to PEM-encoded TLS certificate for this gateway server
   uint64_t ag_block_size;                            // block size for an AG
   
   // debug
   int debug_read;                                    // print verbose information for reads
   int debug_lock;                                    // print verbose information on locks

   // common
   char* gateway_name;
   int metadata_connect_timeout;                      // number of seconds to wait to connect on the control plane
   int portnum;                                       // Syndicate-side port number
   int transfer_timeout;                              // how long a transfer is allowed to take
   bool verify_peer;                                  // whether or not to verify the gateway server's SSL certificate with peers
   char* gateway_key_path;                            // path to PEM-encoded user-given public/private key for this gateway
   char* cdn_prefix;                                  // CDN prefix
   char* proxy_url;                                   // URL to a proxy to use (instead of a CDN)
   int replica_connect_timeout;                       // number of seconds to wait to connect to an RG
   
   // MS-related fields
   char* metadata_url;                                // URL (or path on disk) where to get the metadata
   char* ms_username;                                 // MS username for this SyndicateUser
   char* ms_password;                                 // MS password for this SyndicateUser
   uint64_t owner;                                    // what is our user ID in Syndicate?  Files created in this UG will assume this UID as their owner
   uint64_t gateway;                                  // what is the gateway ID in Syndicate?
   uint64_t view_reload_freq;                         // how often do we check for new Volume/UG/RG metadata?

   // security fields
   char* gateway_key;
   size_t gateway_key_len;
   char* server_key;
   size_t server_key_len;
   char* server_cert;
   size_t server_cert_len;

   // misc
   mode_t usermask;                                   // umask of the user running this program
   char* mountpoint;                                  // absolute path to the place where the metadata server is mounted
   char* hostname;                                    // what's our hostname?
   char* ag_driver;                                   // AG gatway driver that encompasses gateway callbacks

};
int md_free_conf( struct md_syndicate_conf* conf );
// top-level initialization
int md_init(int gateway_type,
            char const* config_file,
            struct md_syndicate_conf* conf,
            struct ms_client* client,
            int portnum,
            char const* ms_url,
            char const* volume_name,
            char const* gateway_name,
            char const* md_username,
            char const* md_password,
            char const* volume_key_file,
            char const* my_key_file,
            char const* tls_key_file,
            char const* tls_cert_file
         );
int md_shutdown(void);
int md_default_conf( struct md_syndicate_conf* conf );
int md_sign_message( EVP_PKEY* pkey, char const* data, size_t len, char** sigb64, size_t* sigb64len );
// gateway types for md_init
// TODO: sync up with ms.proto?
#define SYNDICATE_UG       1
#define SYNDICATE_AG       2
#define SYNDICATE_RG       3